# mini-clang

./: .gitignore  CMakeLists.txt  README.md  buildLLVM.py
include/clang/Basic/: Diagnostic.h  DiagnosticCommonKinds.inc  DiagnosticLexKinds.inc  DiagnosticParseKinds.inc  FileManager.h  IdentifierTable.h  LangOptions.h  SourceLocation.h  SourceManager.h  SourceManagerInternals.h  TokenKinds.h  Version.h
include/clang/Frontend/: TextDiagnosticPrinter.h
include/clang/Lex/: DirectoryLookup.h  HeaderMap.h  HeaderSearch.h  LexDiagnostic.h  Lexer.h  LiteralSupport.h  MacroInfo.h  MultipleIncludeOpt.h  PPCallbacks.h  Pragma.h  Preprocessor.h  PreprocessorLexer.h  ScratchBuffer.h
include/clang/Parse/: Action.h  AttributeList.h  DeclSpec.h  Scope.h  (+4 more)
lib/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  Diagnostic.cc  FileManager.cc  IdentifierTable.cc  SourceLocation.cc  SourceManager.cc
lib/Frontend/: CMakeLists.txt  TextDiagnosticPrinter.cc
lib/Lex/: CMakeLists.txt  HeaderMap.cc  HeaderSearch.cc  Lexer.cc  LiteralSupport.cc  MacroArgs.cc  MacroArgs.h  PPCaching.cc  PPDirectives.cc  PPExpressions.cc  PPLexerChange.cc  PPMacroExpansion.cc  Pragma.cc  Preprocessor.cc  PreprocessorLexer.cc  ScratchBuffer.cc  TokenConcatenation.cc  TokenLexer.cc
lib/Parse/: AttributeList.cc  CMakeLists.txt  DeclSpec.cc  ExtensionRAIIObject.h  MinimalAction.cc  ParseDecl.cc  ParseDeclCXX.cc  ParseExpr.cc  ParseInit.cc  ParsePragma.cc  ParsePragma.h  ParseStmt.cc  ParseTentative.cc  Parser.cc
lib/Sema/: CMakeLists.txt
tools/driver/: CMakeLists.txt  main.cc
unittests/clang/: CMakeLists.txt
(+4 files in other folders)
